[package]
name = "zk-proof-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.32", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bs58 = "0.5"

spl-token-2022 = "1.0.0"
spl-token-confidential-transfer-proof-generation = "0.3.0"

[patch.crates-io]
zeroize = "1.7.0"  # Force a version that satisfies both constraints